# Themis_Machina

./: .env.example  .gitignore  PROGRESS.md  SPEC_DIGEST.md  pyproject.toml  requirements.txt
Documents/MD/: 01-PRD.md  02-TRD.md  03-AI-ML-System-Design.md  04-App-Flow-User-Journey.md  05-UI-UX-Design.md  06-Evaluation-Plan.md  07-Safety-Responsible-AI.md  08-Data-Architecture.md  09-API-Specification.md  10-Security-Privacy.md  11-Deployment-Infrastructure.md  12-Project-Roadmap.md
misc/: browse.html  browse2.html  find_missing_handles.py  find_missing_handles_google.py  find_pdfs.py  kanoon_curl.html  match_acts.py  remove_acts.py  search_handles.py  search_ic.py  temp.html  test_handles.py  test_kanoon.py  update_handles.py
scrapers/: download_datasets.py  scrape_all.ps1  scrape_hc_judgments.py  scrape_india_code.py  scrape_india_code_1.py  scrape_sc_judgments.py
scripts/: nim_smoke.py
src/themis/: __init__.py  config.py  schemas.py
src/themis/ingestion/: __init__.py  statute_parser.py
src/themis/models/: __init__.py  embedding_client.py  llm_client.py  reranker_client.py
